--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -65,16 +65,16 @@
     <addaction name="allTextAction"/>
     <addaction name="dateTimeAction"/>
    </widget>
+   <widget class="QMenu" name="menu_3">
+    <property name="title">
+     <string>Тема</string>
+    </property>
+    <addaction name="LightThemeAction"/>
+    <addaction name="DarkThemeAction"/>
+   </widget>
    <addaction name="menu"/>
    <addaction name="menu_2"/>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
+   <addaction name="menu_3"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="createAction">
@@ -168,6 +168,16 @@
    </property>
    <property name="shortcut">
     <string>F5</string>
+   </property>
+  </action>
+  <action name="LightThemeAction">
+   <property name="text">
+    <string>Светлая</string>
+   </property>
+  </action>
+  <action name="DarkThemeAction">
+   <property name="text">
+    <string>Темная</string>
    </property>
   </action>
  </widget>
